--- a/paper/MochiDB/mochiDB.tex
+++ b/paper/MochiDB/mochiDB.tex
@@ -85,7 +85,7 @@ When building MochiDB we took several assumptions which helped us to simplify th
 
 \section{Architecture}
 
-Our system consists of clients \( C = \{ C_{1},C_{2}, ..., C_{X} \} \). And servers \( S = \{ S_{1}, S_{2}, ..., S_{N} \} \). Clients are servers are identified by random ID which is unique for each client and server. Each of the clients can communicate with any of the servers. Servers store data inside internal DB (datastore) and reply to the clients by defined protocol. Sometimes servers can initiate communication and talk to other servers, for example to perform garbage collection or synchronize missing data.  Diagram \ref{fig:system_view} visualize our architecture. Similar architecture is described in \cite{HQ_replication}.
+Our system consists of clients \( C = \{ C_{1},C_{2}, ..., C_{X} \} \). And servers \( S = \{ S_{1}, S_{2}, ..., S_{N} \} \). Clients are servers are identified by random ID which is unique for each client and server. Each of the clients can communicate with any of the servers. Servers store data inside internal DB (datastore) and reply to the clients by defined protocol. Sometimes servers can initiate communication and talk to other servers, for example to perform garbage collection or synchronize missing data.  Diagram \ref{fig:system_view} visualizes our architecture. Similar architecture is described in \cite{HQ_replication}.
 
 MochiDB is an asynchronous system "where nodes are connected by a network that may fail to deliver messages, delay them, duplicate them, corrupt them, or
 deliver them out of order, and there are no known bounds on message delays or on the time to execute operations." \cite{HQ_replication}
@@ -114,7 +114,7 @@ StoreValueObjectContainer contains the following data inside it:
 
 \subsection{Model}
 
-MochiDB model and design was largely influenced by HQ Replication \cite{HQ_replication}. Traditional agreement-based BFT protocols such as in \cite{Practical_BFT} requires too many message exchanges during operations between servers, but only one request and reply to the client. Such protocol performs well when servers are located close to each other and client is far. But in case of MochiDB, both servers and clients are located far from each other.
+MochiDB model and design was largely influenced by HQ Replication \cite{HQ_replication}. Traditional agreement-based BFT protocols such as in \cite{Practical_BFT} requires too many message exchanges during operations between servers, for every request from the client.  Diagram \ref{fig:Ng1} and \ref{fig:Ng2}  visualizes the message overhead. Such protocol performs well when servers are located close to each other and client is far. But in case of MochiDB, both servers and clients are located far from each other.
 
 \begin{figure}
 \centering
@@ -146,12 +146,7 @@ The Master certificate is used to sign certificates for every client and server 
 MochiDB allows for the different permissions for different clients. Permission management is decentralized. When client is given certificate, it contains special property which defines permission level. We distinguish three level of permissions: READ (read objects), WRITE (read and ) and ADMIN (read, write objects and modify configuration). We expect that only one or few clients will be given ADMIN permission - the permission to add/remove nodes, blacklist certificates and modify sharding.
 
 \section{Protocol Processing}
-In the core of MochiDB lies quorum based BFT protocol. Most of the actions (read, write, epoch progressing, GC, etc.) are done in one or two phase approach. During phase one, some member (client or server) initiates action. It send it to all $3f+1$ nodes (Note: shading modifies that equation and is described separately. For the future descriptions assume that no sharding in present, unless specifically stated so). Then, the initiator waits for $2f+1$ (quorum size) matching responses for write and $f+1$ for reads. If server processing is required, then similar phase 2 starts: responses got during phase 1 are send back to the server along with some action. If something fails, initiator can suggest old servers to bring themselves up to speed and retry operation or message.
-That mechanism is the foundation of every action. When we will be describing concrete actions (read, write, etc) you should expect to see some variety of that mechanism.
-
-\subsection{Action}
-
-Table \ref{table-actions} on page \pageref{table-actions} describes actions available in MochiDB.
+In the core of MochiDB lies quorum based BFT protocol. Most of the actions (read, write, epoch progressing, GC, etc.) are done in one or two phase approach. During phase one, some member (client or server) initiates action. It send it to all $3f+1$ nodes (Note: shading modifies that equation and is described separately. For the future descriptions assume that no sharding in present, unless specifically stated so). Then, the initiator waits for $2f+1$ (quorum size) matching responses for write and $f+1$ for reads. If server processing is required, then similar phase 2 starts: responses got during phase 1 are send back to the server along with some action. If something fails, initiator can suggest old servers to bring themselves upto speed and retry operation or message. Table \ref{table-actions} on page \pageref{table-actions} describes actions available in MochiDB.
 
 \begin{table}[]
 \centering
@@ -180,9 +175,9 @@ There is a risk that frequently updated keys will starve reads as there will be 
 Write are initiated by the client and their purpose is to modify the state of objects. Writes are the challenging part of the protocol as concurrent modification of the same object needs to be coordinated. Some systems solve that issue by executing conflict resolution using agreement based BFT, which significantly increment number of messages \cite{HQ_replication}. In addition, while contention resolution is being processed, servers are frozen and do not serve requests \cite{HQ_replication}. Some other systems use dedicated primary and rotate it if selected one is faulty \cite{Practical_BFT}. Such system also suffers from number of messages and extra processing time for view change.
 MochiDB uses randomness when performing write transaction thus significantly reducing the probability of collision and hence contention resolution. When collision happens, clients simply retry transaction with a new random seed number. That mechanism is described in details in section \ref{write_contension}. For now, let's see how write is processed without any contention.
 
-Client initiate write transaction and send write1ToServer message $\langle Write1ToServer,\ transaction,\ txnHash,\ subEpoch \rangle$ to all servers, where $transaction$ contains just the keys as values are unnecessary in the write1 phase, $txnHash$ is the hash value calculated for the entire transaction including value (excluding value in case of delete) that will be stored in servers to authenticate the subsequent $Write2ToServer$ that will contain the complete key, value payload, $subEpoch$ is the random seed, a number within 0-1000 range alluded earlier in this paper. As the value payload will be sent later, $txnHash$ is invaluable for servers to catch malicious clients who could flip the payload after aquiring a Write1Grant, by including it in the Write1Grant. Upon receiving write1 message, each server checks whether for each object there is already grant for timestamp $objectNextEpoch + subEpoch$, where $objectNextEpoch$ is the next timestamp epoch for that object and $subEpoch$ is the number it got from the client. MochiDB uses unsigned long format for timestamps. Each timestmap consist of epoch and numbering within epoch. We allocate 0-1000 for numbering within each epoch and the rest for epoch. For example, TS=4342 contains of epoch 4 (or equivalently, 4xxxx) and 342 as number within epoch. If timestamp is not granted to any other client, server creates write grant in form $\langle objectId, timestamp \rangle$. Grant is permission for that client to perform write operation on object X at specifies timestamp. Grants are not revocable - once granted, they can be executed at any point later on. Grants for all objects within transaction are unified under multiGrant and stored in the server so that the Server does not issue write1 grants to other clients and transactions overlapping our objects in the same timestamp. After stably storing multiGrant, server sends back write1ok message $\langle\ Write1OkFromServer,\ multiGrant,\ currentC \rangle$ where $currentC$ is hashmap mapping each object to its current certificate.
+Client initiate write transaction and send write1ToServer message $\langle Write1ToServer,\ transaction,\ txnHash,\ subEpoch \rangle$ to all servers, where $transaction$ contains just the keys as values are unnecessary in the write1 phase, $txnHash$ is the hash value calculated for the entire transaction including value (excluding value in case of delete) that will be stored in servers to authenticate the subsequent $Write2ToServer$ that will contain the complete key, value payload, $subEpoch$ is the random seed, a number within 0-1000 range alluded earlier in this paper. As the value payload will be sent later, $txnHash$ is invaluable for servers to catch malicious clients who could flip the payload after aquiring a Write1Grant, by including it in the Write1Grant. Upon receiving write1 message, each server checks whether for each object there is already grant for timestamp $objectNextEpoch + subEpoch$, where $objectNextEpoch$ is the next timestamp epoch for that object and $subEpoch$ is the number it got from the client. MochiDB uses unsigned long format for timestamps. Each timestmap consist of epoch and numbering within epoch. We allocate 0-1000 for numbering within each epoch and the rest for epoch. For example, TS=4342 contains of epoch 4 (or equivalently, 4xxxx) and 342 as number within epoch. If timestamp is not granted to any other client, server creates write grant in form $\langle objectId, timestamp \rangle$. Grant is permission for that client to perform write operation on object X at specifies timestamp. Grants are not revocable - once granted, they can be executed at any point later on. Grants for all objects within transaction are unified under multiGrant and stored in the server so that the Server does not issue Write1 multigrants to other clients and transactions overlapping our objects in the same timestamp and also to service client retries within an epoch when $Write1OkFromServer$ is lost by the network. After stably storing multiGrant, server sends back write1ok message $\langle\ Write1OkFromServer,\ multiGrant,\ currentC \rangle$ where $currentC$ is the object's current certificate.
 
-The client waits for $2f+1$ matching responses and construct $writeC$ out of received multiGrants and send $\langle Write2ToServer,\ writeC,\ transaction \rangle$ message to all servers. Servers processing Write2 message will verify whether the $writeC$ contains $2f+1$ grants with consistent timestamps, calculate transaction Hash based on the complete $transaction$ and verify it with $txnHash$ passed on Write1 phase, if all criteria are met, the Servers commit changes, save provided $writeC$ as $currentC$ for each object and delete the stably stored, corresponding write1Grant issued earlier in Write1 phase; the objects themselves might move to a NewEpoch if necesssary at the end of Write2 phase, more on that in the next section. If the Server finds a discrepancy in txnHash or writeC, the server rejects write2 operation and allows for the client to . In write2 phase, each server sends $Write2ack$ message with current state of object. The client can conculde the transaction is committed when it receives $2f+1$ matching $Write2ack$
+The client waits for $2f+1$ matching responses and construct $writeC$ out of received Write1 multiGrants and send $\langle Write2ToServer,\ writeC,\ transaction \rangle$ message to all servers. Servers processing Write2 message will verify whether the $writeC$ contains $2f+1$ grants with consistent timestamps, calculate transaction Hash based on the complete $transaction$ and verify it with $txnHash$ present on Write1 multiGrant; if all validation criteria are met, the Servers commit changes, save provided $writeC$ as $currentC$ for each object and delete the stably stored, corresponding write1Grant issued earlier in Write1 phase; the objects themselves might move to a NewEpoch if necesssary at the end of Write2 phase, more on that in the next section. If the Server finds a discrepancy in txnHash or writeC, the server rejects Write2 operation and allows for the client to retry. In the former case, each server sends $Write2Ans$ message whic describes current state of objects involved in the transaction. The client can conculde the transaction is committed when it receives $2f+1$ matching $Write2Ans$
 
 If that grant with specified timestamp for object already exists, MochiDB checks whether clientId matches. If clientId matches, that is just retry of the same message and old result is returned. If clientId does not match that means that grant was given to somebody else and hence server sends back
 $\langle\ Write1RefusedFromServer,\ currentC,\\ availableSubEpochs\rangle$
@@ -190,26 +185,26 @@ $\langle\ Write1RefusedFromServer,\ currentC,\\ availableSubEpochs\rangle$
 
 \subsubsection{Write contention} \label{write_contension}
 It is likely that two concurrent transactions will run at the same time and we will need a mechanism to resolve contention. MochiDB server does not freeze read, write requests to perform contention resolution. The random seed passed as $subEpoch$ minimizes the probability of contention and if contention with concurrent transaction had happened nonetheless, it will ask client to retry with a $Write1RefusedFromServer$ message. On a key that is frequently written, it is possible for clients to receive grants with timestamps that don't match, in such scenarios, the client waits for short time and retries $Write1ToServer$ till it receives $2f+1$ grants with the same future timestamp to proceed to the next phase.
-Each exiting object contains $currentC$ with timestamp inside it. That timestamp consists of epoch and numbering within the epoch - subEpoch. Object moves from one epoch to another when write2 message is received and write1 messages are assigned from nextEpoch. Intuitively, epoch change acts as a synchronization point between transactions - if two transactions run at the same time, objects they modify should be from the same epoch. If one transaction runs after another finished, object should belong to different epochs. Within each transaction different objects might be from different epochs, but subEpoch should be exactly the same. Diagram \ref{fig:epochs_view} visualizes epoch timeline. 
+Each exiting object contains $currentC$ with timestamp inside it. That timestamp consists of epoch and numbering within the epoch - subEpoch. Object moves from one epoch to another when Write2 message is received and write1 messages are assigned from nextEpoch. Intuitively, epoch change acts as a synchronization point between transactions - if two transactions run at the same time, objects they modify should be from the same epoch. If one transaction runs after another finished, object should belong to different epochs. Within each transaction different objects might be from different epochs, but subEpoch should be exactly the same. Diagram 3 visualizes epoch timeline. 
 
 \begin{figure*}
 \includegraphics[width=0.8\textwidth]{Epochs.png}
 \label{fig:epochs_view}
 \caption{Object Epoch Timeline}
-\small Object 1 has current epoch 6 $\left(6xxxx\right)$ because during that epoch the last write2 happened - points \textit{c} and \textit{e}. During epoch 6 write2 (point \textit{d}) was granted but never finished. Epoch 5 $\left(5xxxx\right)$ is old epoch with one finished write2 (point \textit{a}) and one non finished (point \textit{b}). New epoch is 7 $\left(7xxxx\right)$. Timestamps for write1 requests will be granted from that epoch. Currently two grants happened (points \textit{f} and \textit{g}), but no write2 was received yet.
+\small Object 1 has current epoch 6 $\left(6xxxx\right)$ because during that epoch the last Write2 happened - points \textit{c} and \textit{e}. During epoch 6 Write2 (point \textit{d}) was granted but never finished. Epoch 5 $\left(5xxxx\right)$ is old epoch with one finished Write2 (point \textit{a}) and one non finished (point \textit{b}). New epoch is 7 $\left(7xxxx\right)$. Timestamps for write1 requests will be granted from that epoch. Currently two grants happened (points \textit{f} and \textit{g}), but no Write2 was received yet.
 \centering
 \end{figure*}
 
-When server executes write2 operations on old or current epoch, the following rule take affect:\\ If epoch of transaction T is less than current epoch - transaction will succeed, but no object will get modified. If epoch of T is the current epoch, but subEpoch is less that current committed subEpoch - Server does not modify the object, replies success along with most recent object value. If epoch of T is the current epoch, but subEpoch is large that current committed subEpoch - update current committed epoch, object write certificate, object value and return success. Such rules are enforced to allow for determinism if multiple commits happen within one epoch.
+When server executes Write2 operations on old or current epoch, the following rule take affect:\\ If epoch of transaction T is less than current epoch - transaction will succeed, but no object will get modified. If epoch of T is the current epoch, but subEpoch is less that current committed subEpoch - Server does not modify the object, replies success along with most recent object value. If epoch of T is the current epoch, but subEpoch is large that current committed subEpoch - update current committed epoch, object write certificate, object value and return success. Such rules are enforced to allow for determinism if multiple commits happen within one epoch.
 
 \subsubsection{Epoch exhaustion}
 It is possible for too many concurrent writes exhaust 1000 range of numbers dedicated to it. If that happens, the clients can identify that and execute special protocol procedure which will start NewEpoch, without modifying current one.
 
 \subsection{Garbage Collection}
-MochiDB produces a lot of stored metadata (notably given Write1 grants) for every object in the datastore. To save disk space and prune expired Write1Grants, MochiDB uses Garbage Collection (GC). When performing GC, MochiDB treats objects independently. Each server runs a background thread that removes given Write1 Grants that were given 2 or more epochs before the current epoch. Recollect that we save Write1 Grant in server for every Object to avoid giving new Write1 Grant to a different transaction on the very same timestamp. As we have moved to newer epochs, the old write1 Grants are no longer needed as they had completed their purpose. Moreovoer, those expired Write1 Grants when cashed in future via Write2 will not lead to any object modifications. MochiDB server will recognize that the object timestamp acquired from its current certificate is greater than the grant timestamp in Write2 and therefore avoids modification of the object, as the object value had been superceded by clients with advanced timestamp grants. It responds back to late Write2 requests with Write2Ans that has the unmodified, latest object value.
+MochiDB produces a lot of stored metadata (notably given Write1 multigrants) for every object in the datastore. To save disk space and prune expired Write1Grants, MochiDB uses Garbage Collection (GC). When performing GC, MochiDB treats objects independently. Each server runs a background thread that removes Write1 multigrants that were given 2 or more epochs before the current epoch. Recollect that we save Write1 Grant in server for every Object to avoid giving new Write1 Grant to a different transaction on the very same timestamp. As we have moved to newer epochs, the old Write1 multigrants are no longer needed as they had completed their purpose. Moreover, those expired Write1 multigrants when cashed in future via Write2 by slow clients will not lead to any object modifications. MochiDB server will recognize that the object timestamp acquired from its current certificate is greater than the grant timestamp in Write2's writeCertificate and therefore avoids modification of the object, as the object value had been superseded by other clients with advanced timestamp grants. It responds back to late Write2 requests with Write2Ans that has the unmodified, latest object value.
 
 \subsection{Resync}
-Clients can detect slow mochiDB servers when they consistently issue write1 Grants that are from older epochs from the rest of the cluster. When alterted by a client with an $UptoSpeed$ operation, the slow mochiDB server acquires write locks on those objects so that all read, write operations pertaining to them stall and proceeds executes a special sync operation with an upto date mochiDB server identified by the client. This sync operation involves overwriting the identified set of objects' value, currentC and given Wrie1 Grants to match those from the upto date server to complete the resync.
+Clients can detect slow mochiDB servers when they consistently issue Write1 multigrants that are from older epochs from the rest of the cluster. When alterted by a client with an $UptoSpeed$ operation, the slow mochiDB server acquires write locks on those objects so that all read, write operations pertaining to them stall and proceeds executes a special sync operation with an upto date mochiDB server identified by the client. This sync operation involves overwriting the identified set of objects' value, currentC and given Wrie1 Grants to match those from the upto date server to complete the resync.
 
 \subsection{Sharding}
 MochiDB supports sharding natively. Each key is mapped to some hash by known and fixed hash function. All of available space is divided into equally sized partitions using Q tokens. Since hash space is known and the number of partitions fixed, it’s trivial and deterministic to calculate those tokens.
@@ -225,7 +220,7 @@ Due to BFT requirements of the protocol, extra restrictions are added to the pro
 Servers which are mapped to N selected tokens must be unique. That prevents the same faulty server participating multiple times in the transactions. That is fixable at the assignment time - when tokens are assigned to servers no 2 out of N sequential tokens are given to the same server.
 
 \subsection{Configuration changes}
-MochiDB allows configuration changes without reboot. Configuration is stored similar to other keys and all configuration keys starts with "CONFIG\_". We introduced “configurationstamp” (CS) which is a number, that increments every time configuration changes. During all operations (such as write1, write2, read, gc, etc.) CS is being passed alongside the message. The server denies message processing if its current CS differs from the received CS.
+MochiDB allows configuration changes without reboot. Configuration is stored similar to other keys and all configuration keys starts with "CONFIG\_". We introduced “configurationstamp” (CS) which is a number, that increments every time configuration changes. During all operations (such as write1, Write2, read, gc, etc.) CS is being passed alongside the message. The server denies message processing if its current CS differs from the received CS.
 
 The following algorithm is executed on a client with admin privilege
 \begin{enumerate}[noitemsep, topsep=0pt,]
@@ -266,7 +261,7 @@ During development we spun up virtual mochiDB server and client clusters within 
 We have identified that using leases will greatly improve write performance across the cluster and the use of hashes to reduce size of messages will improve the overall throughput. We can minimize metadata overhead, by only storing Grants pertaining to an object from majority of MochiDB servers instead of the all encompasing $writeC$, that contains majority grants for all objects involved in the transaction.
 
 \section{Conclusion}
-In this paper we presented MochiDB - distributed, consistent, BFT key value store which is intended to work over high latency communication network. Our testing showed that MochiDB is a viable product that can work well for the situations with high read requests and moderate write requests. Our work is the first attempt to build a production ready BFT datastore for configuration management. In building MochiDB, we applied several enhancements to quorum based protocol including introduction of random write seeds and epochs to minimize contention resolution costs on the server.
+In this paper we presented MochiDB - distributed, consistent, BFT key value store which is intended to work over high latency communication network. Our testing showed that MochiDB is a viable product that can operate well under high read requests and moderate write requests. Our work is the first attempt to build a production ready, WAN distributed BFT datastore for configuration management. In building MochiDB, we applied several enhancements to quorum based protocol including introduction of random write seeds and epochs to minimize contention resolution costs on the server.
 
 {\footnotesize \bibliographystyle{acm}
 \bibliography{mochiDB}}
