--- a/paper/MochiDB/mochiDB.bib
+++ b/paper/MochiDB/mochiDB.bib
@@ -41,7 +41,7 @@ DOI="http://www.scs.stanford.edu/17au-cs244b/sched/readings/dynamo.pdf",
 }
 
 @Article{Practical_BFT,
-    title="HQ Replication: A Hybrid Quorum Protocol for Byzantine Fault Tolerance",
+    title="Practical Byzantine Fault Tolerance",
     author="Miguel Castro and Barbara Liskov",
     DOI="http://pmg.csail.mit.edu/papers/osdi99.pdf",
     journal="Proceedings of the Third Symposium on Operating Systems Design and Implementation",
